install/haproxy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: haproxy-unified-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: haproxy-unified-gateway
  name: haproxy-unified-gateway
  namespace: haproxy-unified-gateway
spec:
  # specify the number of controller replicas
  replicas: 1
  selector:
    matchLabels:
      run: haproxy-unified-gateway
  template:
    metadata:
      labels:
        run: haproxy-unified-gateway
    spec:
      securityContext:
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "0"

      serviceAccountName: haproxy-unified-gateway
      containers:
        - name: haproxy-unified-gateway
          image: docker.io/haproxytech/haproxy-unified-gateway:0.7.0
          imagePullPolicy: Always
          resources:
            limits:
              memory: 2560Mi
            requests:
              memory: 2048Mi
          lifecycle:
            preStop:
              exec:
                # Send SIGUSR1 directly to the haproxy process
                command: ["/bin/sh", "-c", "kill -SIGUSR1 $(cat /var/run/haproxy.pid)"]
          args:
            # specify the hugconf CRD location, all other params are in configuration file
            - --hugconf-crd=haproxy-unified-gateway/hugconf
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            seccompProfile:
              type: RuntimeDefault
          ports:
            # specify the container ports, it needs to align with gateway configuration
            - name: http
              containerPort: 31080
            - name: https
              containerPort: 31443
            # additional container port to specify the stats port
            - name: stat
              containerPort: 31024
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy-unified-gateway
  namespace: haproxy-unified-gateway
spec:
  selector:
    run: haproxy-unified-gateway
  type: LoadBalancer
  ports:
    - name: http
      port: 31080
      targetPort: 31080
      # nodePort is needed for NodePort service type
      nodePort: 31080
      protocol: TCP
    - name: https
      port: 31443
      targetPort: 31443
      # nodePort is needed for NodePort service type
      nodePort: 31443
      protocol: TCP
    - name: stat
      port: 31024
      targetPort: 31024
    - name: http-port
      port: 80
      targetPort: 80
---
